Se cambia el disenio de la aplicacion

--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -9,7 +9,7 @@
         <item
             android:id="@+id/opt_prices"
             android:icon="@drawable/ic_prices"
-            android:title="@string/prices" />
+            android:title="@string/rates" />
     </group>
 
     <!--<item android:title="Communicate">
