--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#4d4368</color>
+    <color name="colorPrimaryDark">#3f2f6b</color>
+    <color name="colorAccent">#ffffff</color>
 
     <color name="darkGreen">#236923</color>
     <color name="lightGreen">#2f8e2f</color>
