--- a/app/src/main/res/layout/fragment_rates.xml
+++ b/app/src/main/res/layout/fragment_rates.xml
@@ -7,36 +7,62 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
+        android:id="@+id/linearlayout_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerview_products_rates"
+            android:id="@+id/recyclerview_products"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-
-
         </android.support.v7.widget.RecyclerView>
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:layout_margin="10dp"
-            android:src="@drawable/ic_recycling" />
-
 
     </LinearLayout>
 
+    <RelativeLayout
+        android:id="@+id/relativelayout_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorPrimary"
+                android:text="@string/not_found_rates"
+                android:textSize="@dimen/fragment_not_found_message"
+                android:gravity="center"
+                android:textStyle="bold|italic"/>
+
+            <ImageView
+                android:layout_width="@dimen/fragment_not_found_icon"
+                android:layout_height="@dimen/fragment_not_found_icon"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_sad"/>
+
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/floatingbutton_save_configuration"
+        android:id="@+id/floatingbutton_new_product"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_yes"
-        android:theme="@style/MyFloatingButton"/>
+        android:src="@drawable/ic_plus"
+        android:clickable="true"
+        app:backgroundTint="@color/colorPrimary"
+        app:rippleColor="@color/colorAccent"/>
 
 
 </android.support.design.widget.CoordinatorLayout>
