--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,7 +18,7 @@
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="MyFloatingButton" parent="Theme.AppCompat.Light">
-        <item name="colorAccent">@color/lightGreen</item>
+        <item name="colorAccent">@color/colorPrimary</item>
     </style>
 
 </resources>
