--- a/app/src/main/res/layout/dialog_fragment_new_product.xml
+++ b/app/src/main/res/layout/dialog_fragment_new_product.xml
@@ -27,7 +27,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#ffffff"
+        android:background="@color/backgroundColor"
         android:orientation="vertical"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -35,10 +35,51 @@
         android:paddingTop="@dimen/activity_vertical_margin"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Your content here"/>
+            android:orientation="vertical">
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:theme="@style/TextInputLayoutStyle"
+                android:layout_margin="@dimen/dialog_margin_normal">
+
+                <EditText
+                    android:id="@+id/textview_new_product_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/product_name"
+                    android:theme="@style/DialogEditTextStyleBig"/>
+
+
+            </android.support.design.widget.TextInputLayout>
+
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:theme="@style/TextInputLayoutStyle"
+                android:layout_margin="@dimen/dialog_margin_normal">
+
+                <EditText
+                    android:id="@+id/textview_new_product_description"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/description"
+                    android:inputType="textMultiLine"
+                    android:lines="2"
+                    android:maxLines="3"
+                    android:scrollbars="vertical"
+                    android:theme="@style/DialogEditTextStyleMedium"/>
+
+
+            </android.support.design.widget.TextInputLayout>
+
+
+
+        </LinearLayout>
 
     </LinearLayout>
 
