--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,14 @@
 
     <color name="darkGreen">#236923</color>
     <color name="lightGreen">#2f8e2f</color>
+
+    <color name="lightBlue">#6f98e4</color>
+    <color name="darkBlue">#32518b</color>
+
+    <color name="lightGray">#c9c9c9</color>
+
+    <color name="lightPurple">#775c8e</color>
+
+    <color name="backgroundColor">#ececec</color>
+
 </resources>
