--- a/app/src/main/res/layout/dialog_fragment_new_product.xml
+++ b/app/src/main/res/layout/dialog_fragment_new_product.xml
@@ -77,6 +77,24 @@
 
             </android.support.design.widget.TextInputLayout>
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/select_icon"
+                android:textSize="@dimen/edittext_text_size_normal"
+                android:textColor="@color/colorPrimary"
+                android:layout_marginTop="@dimen/dialog_margin_small"/>
+
+            <GridView
+                android:id="@+id/gridview_icon_selection"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:numColumns="auto_fit"
+                android:verticalSpacing="10dp"
+                android:horizontalSpacing="10dp"
+                android:stretchMode="columnWidth"
+                android:gravity="center" />
+
 
 
         </LinearLayout>
