--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -52,7 +52,7 @@
     <!-- ################################       TEXT INPUT LAYOUT STYLES        ################################### -->
 
 
-    <style name="TextInputLayoutStyle" parent="TextAppearance.AppCompat">
+    <style name="TextInputLayoutStyle">
         <!-- Hint color and label color in FALSE state -->
         <item name="android:textColorHint">@color/colorPrimary</item>
         <item name="android:textSize">20sp</item>
