Se puede seleccionar un icono para el producto del gridview de seleccion

--- a/app/src/main/res/layout/dialog_fragment_new_product.xml
+++ b/app/src/main/res/layout/dialog_fragment_new_product.xml
@@ -94,7 +94,8 @@
                 android:verticalSpacing="10dp"
                 android:horizontalSpacing="10dp"
                 android:stretchMode="columnWidth"
-                android:gravity="center" />
+                android:gravity="center"
+                android:listSelector="@drawable/selector_gridview_icon"/>
 
 
 
