--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -30,6 +30,7 @@
     <dimen name="fragment_not_found_icon">30dp</dimen>
 
 
-    <dimen name="gridview_icon_size">200dp</dimen>
+    <dimen name="gridview_icon_size">80dp</dimen>
+    <dimen name="gridview_icon_selectec_size">30dp</dimen>
     <dimen name="gridview_padding_icon">20dp</dimen>
 </resources>
