--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,9 @@
     <color name="darkGreen">#236923</color>
     <color name="lightGreen">#2f8e2f</color>
 
+    <color name="darkRed">#97262a</color>
+    <color name="lightRed">#ff333a</color>
+
     <color name="lightBlue">#6f98e4</color>
     <color name="darkBlue">#32518b</color>
 
