Al crear un nuevo producto este actualiza el listado exterior de los productos registrados en la aplicacion

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="lightBlue">#6f98e4</color>
     <color name="darkBlue">#32518b</color>
 
+    <color name="darkGray">#8e8e8e</color>
     <color name="lightGray">#c9c9c9</color>
 
     <color name="lightPurple">#775c8e</color>
