--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,13 +24,18 @@
     <dimen name="edittext_text_size_normal">@dimen/edittext_text_size</dimen>
     <dimen name="edittext_text_size_small">10dp</dimen>
 
-
-
     <dimen name="fragment_not_found_message">20dp</dimen>
     <dimen name="fragment_not_found_icon">30dp</dimen>
 
+    <dimen name="icon_product_size">50dp</dimen>
 
     <dimen name="gridview_icon_size">80dp</dimen>
     <dimen name="gridview_icon_selectec_size">30dp</dimen>
     <dimen name="gridview_padding_icon">20dp</dimen>
+
+    <!-- Card View -->
+    <dimen name="cardview_margin">10dp</dimen>
+    <dimen name="cardview_padding">10dp</dimen>
+    <dimen name="cardview_product_name_size">20dp</dimen>
+    <dimen name="cardview_product_deescription_size">15dp</dimen>
 </resources>
