--- a/app/src/main/res/layout/dialog_fragment_new_rate.xml
+++ b/app/src/main/res/layout/dialog_fragment_new_rate.xml
@@ -7,6 +7,8 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
+
+
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -18,78 +20,83 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay"/>
-
     </android.support.design.widget.AppBarLayout>
 
+
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/backgroundColor"
-        android:orientation="vertical"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:background="@color/backgroundColor"
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/textinputlayout_rate_name"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:theme="@style/TextInputLayoutStyle"
-                android:layout_margin="@dimen/dialog_margin_normal"
-                app:errorEnabled="true">
+                android:orientation="vertical">
 
-                <EditText
-                    android:id="@+id/edittext_new_rate_name"
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/textinputlayout_rate_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="textCapCharacters"
-                    android:hint="@string/rate_name"
-                    android:theme="@style/DialogEditTextStyleBig"/>
+                    android:theme="@style/TextInputLayoutStyle"
+                    android:layout_margin="@dimen/dialog_margin_normal"
+                    app:errorEnabled="true">
+
+                    <EditText
+                        android:id="@+id/edittext_new_rate_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textCapCharacters"
+                        android:hint="@string/rate_name"
+                        android:theme="@style/DialogEditTextStyleBig"/>
 
 
-            </android.support.design.widget.TextInputLayout>
+                </android.support.design.widget.TextInputLayout>
 
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/textinputlayout_rate_description"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:theme="@style/TextInputLayoutStyle"
-                android:layout_margin="@dimen/dialog_margin_normal"
-                app:errorEnabled="true">
-
-                <EditText
-                    android:id="@+id/edittext_new_rate_description"
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/textinputlayout_rate_description"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/description"
-                    android:inputType="textMultiLine"
-                    android:lines="2"
-                    android:maxLines="3"
-                    android:scrollbars="vertical"
-                    android:theme="@style/DialogEditTextStyleMedium"/>
+                    android:theme="@style/TextInputLayoutStyle"
+                    android:layout_margin="@dimen/dialog_margin_normal"
+                    app:errorEnabled="true">
+
+                    <EditText
+                        android:id="@+id/edittext_new_rate_description"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/description"
+                        android:inputType="textMultiLine"
+                        android:lines="2"
+                        android:maxLines="3"
+                        android:scrollbars="vertical"
+                        android:theme="@style/DialogEditTextStyleMedium"/>
 
 
-            </android.support.design.widget.TextInputLayout>
+                </android.support.design.widget.TextInputLayout>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/select_products"
-                android:textSize="@dimen/edittext_text_size_normal"
-                android:textColor="@color/colorPrimary"
-                android:layout_marginTop="@dimen/dialog_margin_small"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/select_products"
+                    android:textSize="@dimen/edittext_text_size_normal"
+                    android:textColor="@color/colorPrimary"
+                    android:layout_marginTop="@dimen/dialog_margin_small"
+                    android:layout_marginBottom="@dimen/dialog_margin_small"/>
 
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recyclerview_products_registered"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
+                </android.support.v7.widget.RecyclerView>
+
+            </LinearLayout>
         </LinearLayout>
-
-    </LinearLayout>
-
 </android.support.design.widget.CoordinatorLayout>
