--- a/app/src/main/res/layout/item_rate_product.xml
+++ b/app/src/main/res/layout/item_rate_product.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -19,36 +20,37 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:orientation="horizontal"
-                android:gravity="right">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="P"
-                    android:textSize="10dp"
-                    android:textColor="@android:color/darker_gray"
-                    android:textStyle="bold"/>
-                <TextView
-                    android:id="@+id/textview_product_code"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="10dp"
-                    android:textColor="@android:color/darker_gray"
-                    android:textStyle="bold"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:orientation="horizontal"
                 android:weightSum="10">
+
+
 
                 <RelativeLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="3"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:layout_gravity="top|left">
+
+                    <com.github.zagum.switchicon.SwitchIconView
+                        android:id="@+id/switchicon_product_enabled"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:padding="8dp"
+                        app:si_animation_duration="500"
+                        app:si_disabled_alpha=".3"
+                        app:si_disabled_color="@color/darkGray"
+                        app:si_tint_color="@color/highLightBlue"
+                        app:si_enabled="false"
+                        app:si_no_dash="true"
+                        android:scaleType="fitXY"
+                        app:srcCompat="@drawable/ic_checked"/>
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
                     android:gravity="center"
                     android:layout_gravity="center">
 
